itv mysql